--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -131,7 +131,7 @@ h3 {
 
   #amarelotopo {
     width: 100%;
-    height: 100%;
+    height: 200px;
     background: url('@images/amarelo-topo.png') top left no-repeat;
     background-size: 25%;
     position: absolute;
