--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -60,14 +60,14 @@ h3 {
 body {
   margin: 1%;
   overflow-x: hidden;
-  background: url('../imagens/azul-topo.png') top right no-repeat #fff;
+  background: url('./assets/imagens/azul-topo.png') top right no-repeat #fff;
   background-size: 40%;
 }
 
 #amarelotopo {
   width: 100%;
   height: 200px;
-  background: url('../imagens/amarelo-topo.png') top left no-repeat;
+  background: url('./assets/imagens/amarelo-topo.png') top left no-repeat;
   background-size: 45%;
   position: absolute;
   color: #fff;
@@ -79,7 +79,7 @@ body {
 #rosabase {
   width: 100%;
   height: 550px;
-  background: url('../imagens/rosa-base.png') bottom right no-repeat;
+  background: url('./assets/imagens/rosa-base.png') bottom right no-repeat;
   background-size: 30%;
   position: absolute;
   color: #fff;
@@ -119,7 +119,7 @@ option {
 .amarelo:hover {
   background: #d6ac01;
   box-shadow: #d6ac01 0px 7px 20px 0px;
-  background: url('../imagens/simbolo-sonoro.webp') #d6ac01 no-repeat top right;
+  background: url('./assets/imagens/simbolo-sonoro.webp') #d6ac01 no-repeat top right;
   background-size: 30%;
 }
 
@@ -134,7 +134,7 @@ option {
 .rosa:hover {
   background: #e01caf;
   box-shadow: #e01caf 0px 7px 20px 0px;
-  background: url('../imagens/simbolo-sonoro.webp') #e01caf no-repeat top right;
+  background: url('./assets/imagens/simbolo-sonoro.webp') #e01caf no-repeat top right;
   background-size: 30%;
 }
 
@@ -149,7 +149,7 @@ option {
 .vermelho:hover {
   background: #d91623;
   box-shadow: #d91623 0px 7px 20px 0px;
-  background: url('../imagens/simbolo-sonoro.webp') #d91623 no-repeat top right;
+  background: url('./assets/imagens/simbolo-sonoro.webp') #d91623 no-repeat top right;
   background-size: 30%;
 }
 
@@ -164,7 +164,7 @@ option {
 .lilas:hover {
   background: #691ddb;
   box-shadow: #691ddb 0px 7px 20px 0px;
-  background: url('../imagens/simbolo-sonoro.webp') #691ddb no-repeat top right;
+  background: url('./assets/imagens/simbolo-sonoro.webp') #691ddb no-repeat top right;
   background-size: 30%;
 }
 
@@ -179,7 +179,7 @@ option {
 .verde:hover {
   background: #09ae3d;
   box-shadow: #09ae3d 0px 7px 20px 0px;
-  background: url('../imagens/simbolo-sonoro.webp') #09ae3d no-repeat top right;
+  background: url('./assets/imagens/simbolo-sonoro.webp') #09ae3d no-repeat top right;
   background-size: 30%;
 }
 
@@ -194,7 +194,7 @@ option {
 .azul:hover {
   background: #0387cf;
   box-shadow: #0387cf 0px 7px 20px 0px;
-  background: url('../imagens/simbolo-sonoro.webp') #0387cf no-repeat top right;
+  background: url('./assets/imagens/simbolo-sonoro.webp') #0387cf no-repeat top right;
   background-size: 30%;
 }
 
@@ -205,14 +205,14 @@ option {
   body {
     margin: 1%;
     overflow-x: hidden;
-    background: url('../imagens/azul-topo.png') top right no-repeat #fff;
+    background: url('./assets/imagens/azul-topo.png') top right no-repeat #fff;
     background-size: 15%;
   }
 
   #amarelotopo {
     width: 100%;
     height: 200px;
-    background: url('../imagens/amarelo-topo.png') top left no-repeat;
+    background: url('./assets/imagens/amarelo-topo.png') top left no-repeat;
     background-size: 25%;
     position: absolute;
     color: #fff;
